--- a/todo.html
+++ b/todo.html
@@ -11,7 +11,7 @@
     <form>
         <input type="checkbox" checked >HTML 5 <br>
         <input type="checkbox" checked >Advance HTML 5 <br>
-        <input type="checkbox" >CSS <br>
+        <input type="checkbox" checked >CSS <br>
         <input type="checkbox" >Advance CSS <br>
         <input type="checkbox" >Bootstrap Templates <br>
         <input type="checkbox" >CSS Grid CSS Layout <br>
