--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <ul>
       <li>Discord: darkcupid412</li>
       <li>Email: darkcupid412@outlook.com</li>
-      <li>Github: </li>
+      <li>Github: darkcupid412</li>
     </ul>
   </body>
 </html>
